<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImHere</string>
    <string name="menu_settings">Settings</string>

    <string name="account">アカウント</string>
    <string name="account_item">アカウント設定</string>
    <string name="mail">メールアドレス</string>
    <string name="hint_mail">example@gmail.com</string>
    <string name="password">パスワード</string>
    <string name="hint_password">パスワードを入力</string>
    <string name="display_password">パスワードを表示する</string>
    <string name="alert_password">※パスワードを表示する場合、後ろから覗き見されないよう注意してください</string>
    <string name="interval_label">通知間隔</string>
    <string name="service_launch_label">サービスを起動</string>
    <string name="service_launch_on_boot_label">ブート時にサービスを起動</string>
    <string name="location_setting_label">位置情報サービス設定</string>
    <string name="terminal_settings">端末設定</string>
    <string name="launch_settings">起動</string>
    <string name="test_label">確認</string>
    <string name="submit_test">テスト送信</string>
    <string name="use_geocoder">住所を逆引き</string>
    <string name="use_geocoder_summary">取得した緯度経度から住所を逆引きして表示します</string>

    <!-- PreferencesのKey -->
    <string name="pref_key_launch_on_boot">pref_key_launch_on_boot</string>
    <string name="pref_key_launch">pref_key_launch</string>
    <string name="pref_key_interval">pref_key_interval</string>
    <string name="pref_key_mail">pref_key_mail</string>
    <string name="pref_key_pass">pref_key_pass</string>
	<string name="pref_key_use_geocoder">pref_key_use_geocoder</string>

    <!-- SubmitTestDialog -->
    <string name="submit_test_dialog_title">送信確認</string>
    <string name="submit_test_dialog_message">%s \n\n位置情報を取得し、上記アドレスにメールを送信します。</string>
    <string name="submit_test_dialog_positive">OK</string>
    <string name="submit_test_dialog_negative">キャンセル</string>
</resources>